# 06-nbody-06-nbody

./: CMakeLists-Template.txt  CMakeLists.txt  CudaRuntime1.vcxproj  IO.hpp  Makefile  README.md  body.hpp  compute_force.cuh  energy_change.csv  energy_keep.csv  general  general_force.cpp  input.txt  nbody_cuda_leapfrog.cu  trajectory.csv  vector.hpp
CudaRuntime1/x64/Debug/: compute_force.cu.cache  compute_force.cu650836612.deps  kernel.cu.cache
CudaRuntime1/x64/Debug/CudaRuntime1.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CudaRuntime1.lastbuildstate
include/: BHTree.hpp  Body.hpp  Camera.hpp  CollisionHandler.hpp  Entropy.hpp  IO.hpp  Matrix.hpp  NBodyBHSolver.hpp  NBodyBHSolverOpenMP.hpp  NbodySolver.hpp  Quad.hpp  RandomBodyGenerator.hpp  Renderer.hpp  ShaderProgram.hpp  Vector.hpp  Visualizer.hpp  abstract_fmm_tree.hpp  abstract_quadtree.hpp  balanced_quadtree.hpp  fmm_tables.hpp  fmm_utility.hpp  local_expansion.hpp  multipole_expansion.hpp  particle_generators.hpp  series_expansion.hpp  vector.hpp
initial_conditions/: elliptical_galaxy.txt  inputLL1AC.txt  spiral_galaxy.txt
results/: report.md
results/energyData/euler/: energyData-1.txt  energyData-2.txt  energyData-3.txt  energyData-3eul1000.txt  energyData-4.txt
results/energyData/leapfrog/: energyData-1.txt  energyData-2.txt  energyData-3.txt  energyData-3leap1000.txt  energyData-4.txt  energyData-5.txt
scripts/: bodyData.txt  bodyPlotter.py  configGenerator.py  energyData-10.txt  energyData-15.txt  energyData-5.txt  energyData.txt  energyData0.txt  energyEps.py  energyPlotter.py
shaders/: particle.frag  particle.vert
src/: Camera.cpp  NbodySolver.cpp  Renderer.cpp  ShaderProgram.cpp  Visualizer.cpp  main.cpp
tests/: CMakeLists.txt  entropy_log_openmp.txt  openmp_runtime_different_threads.csv  particle_positions.txt  particle_positions_openmp.txt
tests/BH_test/: BH_test.cpp  BH_test_openmp.cpp  CMakeLists.txt  GenerateBodies.cpp  Plot.py  PlotE.py  Plot_entropy.py  Plot_openmp_threads.py  bh_openmp  bh_serial  energy_evolution.txt  entropy_log.txt  generate_bodies  particle_positions.txt
tests/BH_test/GeneratedBodies/: generated_bodies.txt  generated_bodies_1000.txt  generated_bodies_500.txt  generated_bodies_5000.txt
tests/Integration/: Plot.py  PlotE.py  integrator_leapfrog_2d.cpp
tests/Performance/: Plot_Efficiency.py  Plot_Error_Time.py  Plot_Items_Per_Leaf.py  Plot_Position.py  accuracy_test.cpp  efficiency_test.cpp
tests/body_test/: body_test.cpp
tests/energy_test/: CMakeLists.txt  energy_test.cpp
tests/fmm_test/: CMakeLists.txt  abstract_fmm_tree.hpp  balanced_fmm_tree.hpp  balanced_quadtree.hpp  fmm_fields.hpp  fmm_tables.hpp  fmm_utility.hpp  multipole_expansion.hpp  particle_generators.hpp  series_expansion.hpp  vector.hpp
tests/fmm_test/Integration/: integrator_leapfrog_2d.cpp
tests/fmm_test/Performance/: Plot_Efficiency.py  Plot_Error_Eps.py  Plot_Spatial.py  accuracy_test.cpp  efficiency_test.cpp
tests/fmm_test/examples/: Plot.py  PlotE.py
tests/io_test/: CMakeLists.txt  io_test.cpp
tests/scalability_test/: CMakeLists.txt  scalability_test.cpp
tests/solver_test/: CMakeLists.txt  bodyPlotter.py  energyPlotter.py  output.txt  plotter.py  solver_test.cpp
tests/solver_test/input examples/: input4000.txt
tests/vector_test/: vector_test.cpp
x64/Debug/: CudaRuntime1.exp  CudaRuntime1.lib  compute_forces.cu.cache  kernel.cu.cache  nbody_cuda_leapfrog.cu-487797408.deps  nbody_cuda_leapfrog.cu.cache  nbody_sim.exe.recipe
x64/Debug/nbody_sim.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  nbody_sim.lastbuildstate
x64/Release/: nbody_cuda_leapfrog.cu-487797408.deps  nbody_cuda_leapfrog.cu.cache  nbody_sim.exe.recipe
x64/Release/nbody_sim.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  nbody_sim.lastbuildstate
